--- a/gradle.properties
+++ b/gradle.properties
@@ -9,13 +9,14 @@ mavenGroup = transfarmer
 # Dependencies
 apiVersion = 0.10.8+build.310-1.15
 
+fastutil = it.unimi.dsi:fastutil:8.3.1
+javassist = org.javassist:javassist:3.15.0-GA
 jsr = com.google.code.findbugs:jsr305:3.0.2
 reflections = org.reflections:reflections:0.9.12
 
 autoConfig = me.sargunvohra.mcmods:autoconfig1u:2.2.0
 cardinalComponents = com.github.OnyxStudios.Cardinal-Components-API:Cardinal-Components-API:master-SNAPSHOT
 clothConfig = me.shedaniel.cloth:config-2:2.14.1
-fastutil = it.unimi.dsi:fastutil:8.3.1
 modMenu = io.github.prospector:modmenu:1.10.2+build.32
 
 anvil = com.github.transfarmer:anvil:1.15.2-SNAPSHOT
