--- a/common.gradle
+++ b/common.gradle
@@ -3,3 +3,7 @@ repositories {
         url "https://jitpack.io"
     }
 }
+
+configurations.all {
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+}
