--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '0.4.15'
+    id 'fabric-loom' version '0.4-SNAPSHOT'
     id 'maven-publish'
 }
 
@@ -25,7 +25,7 @@ dependencies {
     implementation "${project.fastutil}"
     include "${project.fastutil}"
 
-    compile "${project.javassist}"
+    implementation "${project.javassist}"
     include "${project.javassist}"
 
     implementation "${project.jsr}"
