--- a/gradle.properties
+++ b/gradle.properties
@@ -19,7 +19,7 @@ cardinalComponents = com.github.OnyxStudios.Cardinal-Components-API:Cardinal-Com
 clothConfig = me.shedaniel.cloth:config-2:2.14.1
 modMenu = io.github.prospector:modmenu:1.10.2+build.32
 
-anvil = transfarmer:anvil:1.15.2-SNAPSHOT
+anvil = com.github.transfarmer:anvil:1.15.2-SNAPSHOT
 anvilevents = com.github.transfarmer:anvilevents:1.15.2-SNAPSHOT
 farmerlib = com.github.transfarmer:farmerlib:1.15.2-SNAPSHOT
 reachEntityAttributes = com.github.transfarmer:reachentityattributes:1.15.2-SNAPSHOT
