--- a/gradle.properties
+++ b/gradle.properties
@@ -22,4 +22,5 @@ modMenu = io.github.prospector:modmenu:1.10.2+build.32
 anvil = com.github.transfarmer:anvil:1.15.2-SNAPSHOT
 anvilevents = com.github.transfarmer:anvilevents:1.15.2-SNAPSHOT
 farmerlib = com.github.transfarmer:farmerlib:1.15.2-SNAPSHOT
+overpowered = com.github.transfarmer:overpowered:1.15.2-SNAPSHOT
 reachEntityAttributes = com.github.transfarmer:reachentityattributes:1.15.2-SNAPSHOT
