--- a/gradle.properties
+++ b/gradle.properties
@@ -21,6 +21,7 @@ modMenu = io.github.prospector:modmenu:1.10.2+build.32
 
 anvil = com.github.user11681:anvil:1.15.2-SNAPSHOT
 anvilevents = com.github.user11681:anvilevents:1.15.2-SNAPSHOT
+#anvilevents = user11681:anvilevents:0.1.2
 farmerlib = com.github.user11681:farmerlib:1.15.2-SNAPSHOT
 overpowered = com.github.user11681:overpowered:1.15.2-SNAPSHOT
 reachEntityAttributes = com.github.user11681:reachentityattributes:1.15.2-SNAPSHOT
