fix registration issues rename EventInvoker to Anvil

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,8 @@ cardinalComponents = com.github.OnyxStudios.Cardinal-Components-API:Cardinal-Com
 clothConfig = me.shedaniel.cloth:config-2:2.14.1
 modmenu = io.github.prospector:modmenu:1.10.2+build.32
 
-anvil = com.github.user11681:anvil:1.15.2-SNAPSHOT
+#anvil = com.github.user11681:anvil:1.15.2-SNAPSHOT
+anvil = user11681:anvil:0.4.2
 anvilevents = com.github.user11681:anvilevents:1.15.2-SNAPSHOT
 #anvilevents = user11681:anvilevents:0.1.2
 usersmanual = com.github.user11681:usersmanual:1.15.2-SNAPSHOT
