--- a/gradle.properties
+++ b/gradle.properties
@@ -1,27 +1,52 @@
 org.gradle.jvmargs=-Xmx3G
 
-minecraft = com.mojang:minecraft:1.16-pre7
-yarn = net.fabricmc:yarn:1.16-pre7+build.1:v2
-loader = net.fabricmc:fabric-loader:0.8.7+build.201
-api = net.fabricmc.fabric-api:fabric-api:0.12.4+build.365-1.16
+minecraft = com.mojang:minecraft:20w27a
+yarn = net.fabricmc:yarn:20w27a+build.9:v2
+loader = net.fabricmc:fabric-loader:+
+
+api = net.fabricmc.fabric-api:fabric-api:+
+apiBase = net.fabricmc.fabric-api:fabric-api-base:+
+apiEventsInteraction = net.fabricmc.fabric-api:fabric-events-interaction-v0:+
+apiKeyBindings = net.fabricmc.fabric-api:fabric-key-binding-api-v1:+
+apiLifecycleEvents = net.fabricmc.fabric-api:fabric-lifecycle-events-v1:+
+apiNetworking = net.fabricmc.fabric-api:fabric-networking-v0:+
+apiRendererApi = net.fabricmc.fabric-api:fabric-renderer-api-v1:+
+apiRendererIndigo = net.fabricmc.fabric-api:fabric-renderer-indigo:+
+apiResourceLoader = net.fabricmc.fabric-api:fabric-resource-loader-v0:+
 
 
-jsr = com.google.code.findbugs:jsr305:3.0.2
+jetbrainsAnnotations = org.jetbrains:annotations:+
 
-autoconfig = me.sargunvohra.mcmods:autoconfig1u:3.2.0-unstable
+jsr = com.google.code.findbugs:jsr305:+
 
-cardinalComponents = com.github.OnyxStudios.Cardinal-Components-API:Cardinal-Components-API:1.16-SNAPSHOT
-cardinalComponentsBase = com.github.OnyxStudios.Cardinal-Components-API:cardinal-components-base:1.16-SNAPSHOT
-cardinalComponentsEntity = com.github.OnyxStudios.Cardinal-Components-API:cardinal-components-entity:1.16-SNAPSHOT
-cardinalComponentsItem = com.github.OnyxStudios.Cardinal-Components-API:cardinal-components-item:1.16-SNAPSHOT
-
-clothconfig = me.shedaniel.cloth:config-2:4.5.0-unstable
-modmenu = io.github.prospector:modmenu:1.12.1+build.15
 
 anvil = com.github.user11681:anvil:1.16-SNAPSHOT
-#anvil = user11681:anvil:0.6.0
-anvilevents = com.github.user11681:anvilevents:1.16-SNAPSHOT
-#anvilevents = user11681:anvilevents:0.1.2
-usersmanual = com.github.user11681:usersmanual:1.16-SNAPSHOT
+#anvil = user11681:anvil:+
+
+anvilEvents = com.github.user11681:anvilevents:1.16-SNAPSHOT
+#anvilevents = user11681:anvilevents:+
+
+arrp = net.devtech:arrp:+
+
+autoConfig = me.sargunvohra.mcmods:autoconfig1u:+
+
+cardinalComponents = com.github.OnyxStudios.Cardinal-Components-API:Cardinal-Components-API:1.16-SNAPSHOT
+cardinalComponentsBase = com.github.OnyxStudios.Cardinal-Components-API:cardinal-components-base:master-SNAPSHOT
+cardinalComponentsEntity = com.github.OnyxStudios.Cardinal-Components-API:cardinal-components-entity:1.16-SNAPSHOT
+cardinalComponentsItem = com.github.OnyxStudios.Cardinal-Components-API:cardinal-components-item:master-SNAPSHOT
+
+clothConfig = me.shedaniel.cloth:config-2:+
+
+cottonResources = io.github.cottonmc:cotton-resources:+
+
 limitless = com.github.user11681:limitless:1.16-SNAPSHOT
-reachentityattributes = com.github.user11681:reach-entity-attributes:1.16-SNAPSHOT
+
+mirror = com.github.user11681:mirror:master-SNAPSHOT
+
+modMenu = io.github.prospector:modmenu:+
+
+prone = com.github.user11681:prone:1.16-SNAPSHOT
+
+reachEntityAttributes = com.jamieswhiteshirt:reach-entity-attributes:+
+
+usersManual = com.github.user11681:usersmanual:1.16-SNAPSHOT
